--- a/src/pages/home/home-page/home-page.component.scss
+++ b/src/pages/home/home-page/home-page.component.scss
@@ -1,3 +1,15 @@
-div{
-    color:red;
+.tittle{
+    text-align: center;
+}
+.tb-header{
+    background: #7986cb;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.tb-list{
+    text-align: center;
+}
+
+.tb-cell{
+    border: 1px solid #c5cae9;
 }
