--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="header">
-<h1>Cloud Admin</h1>
+<h1>公司员工管理系统</h1>
 </div>
 
 <div class="row">
 <div class="col-3 col-m-3 menu">
 <ul>
-<li routerLink="home">HOME主页</li>
-<li routerLink="about">ABOUT关于</li>
+<li routerLink="home">员工管理</li>
+<!-- <li routerLink="about">ABOUT关于</li> -->
 </ul>
 </div>
 <div class="col-9 col-m-9">
@@ -15,7 +15,7 @@
 
 </div>
 <div class="footer">
-<p>Resize the browser window to see how the content respond to the resizing.</p>
+<!-- <p>Resize the browser window to see how the content respond to the resizing.</p> -->
 </div>
 
 
