--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ html {
     font-family: "Lucida Sans", sans-serif;
 }
 .header {
-    background-color: #9933cc;
+    background-color: #5c6bc0;
     color: #ffffff;
     padding: 15px;
 }
@@ -29,12 +29,12 @@ html {
 .menu li {
     padding: 8px;
     margin-bottom: 7px;
-    background-color :#33b5e5;
+    background-color : #5c6bc0;
     color: #ffffff;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .menu li:hover {
-    background-color: #0099cc;
+    background-color: #283593;
 }
 .aside {
     background-color: #33b5e5;
@@ -43,13 +43,6 @@ html {
     text-align: center;
     font-size: 14px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-.footer {
-    background-color: #0099cc;
-    color: #ffffff;
-    text-align: center;
-    font-size: 12px;
-    padding: 15px;
 }
 /* For mobile phones: */
 [class*="col-"] {
